# munikis

./: .env.example  .gitignore  README.md  docker-compose.gcp.yml  docker-compose.prod.yml  docker-compose.yml
node/: .babelrc  (+2 more)
web/: .dockerignore  Dockerfile  Pipfile  manage.py  pyproject.toml  start.sh  uwsgi.ini
web/account/: forms.py  models.py
web/account/auth/: urls.py  views.py
web/account/migrations/: 0013_auto_20200316_1434.py  0014_user_mutes.py
web/account/templates/auth/: login.html
web/account/templates/settings/: edit.html
web/account/users/: urls.py  views.py
web/ajax/: admin.py  forms.py  models.py  urls.py  views.py
web/ajax/migrations/: 0004_friendship.py  0005_mute.py
web/browse/: admin.py  models.py  urls.py  utils.py  views.py
web/browse/migrations/: 0014_auto_20200310_0602.py  0015_auto_20200313_1001.py  0016_label_icon.py  0017_auto_20200406_1318.py  0018_auto_20200407_0534.py
web/core/: context_processors.py  urls.py  utils.py  views.py
web/core/templatetags/: core_tags.py
web/notify/: context_processors.py  models.py  views.py
web/pages/: models.py  views.py
web/pages/migrations/: 0004_page_category.py  0005_auto_20200331_0831.py
web/templates/: 404.html  500.html  base.html
web/templates/admin/: index.html
web/tools/: urls.py  views.py
web/tsukuriga/: urls.py  wsgi.py
web/tsukuriga/settings/: base.py  dev.py  prod.py
web/upload/: admin.py  decorators.py  forms.py  importer.py  models.py  views.py
web/upload/migrations/: 0016_auto_20190612_2310.py  0020_video_is_ban.py  0021_auto_20200416_1313.py
(+73 files in other folders)
