[tool.poetry]
name = "tsukuriga"
version = "0.1.0"
description = ""
authors = ["mkizka"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.1.15"
social-auth-app-django = "^3.1.0"
django-webpack-loader = "^0.7.0"
django-bulma = "^0.6.0"
tocka-django-unslashed = {git = "https://github.com/mkizka/django-unslashed.git"}
pillow = "^7.0.0"
python-twitter = "^3.5"
moviepy = "^1.0.1"
django-storage-swift = "^1.2.19"
django-markdownx = "^3.0.1"
django-environ = "^0.4.5"
pymysql = "^0.9.3"
django-cleanup = "^4.0.0"
django-maintenance-mode = "^0.14.0"
pymdown-extensions = "^6.3"
django-cors-headers = "^3.2.1"
uwsgi = "^2.0.18"
django-pwa = "^1.0.8"

[tool.poetry.dev-dependencies]
django-extensions = "^2.2.8"
werkzeug = "^1.0.0"
django-debug-toolbar = "^2.2"
Faker = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
